# dir2path

./: pyproject.toml
dir2path/: console.py
